Current - Self-Hosting - k3s/clusters/apps/Keycloak/keycloak.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pg-keycloak
  namespace: default
  labels:
    app: pg-keycloak
spec:
  selector:
    matchLabels:
      app: pg-keycloak
  template:
    metadata:
      labels:
        app: pg-keycloak
    spec:
      containers:
      - name: pg-keycloak
        image: docker.io/postgres:latest
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: pgdata
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: pgdata
        hostPath:
          path: /mnt/raid/nas/pg/keycloak
---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: pg-keycloak
  labels:
    service: pg-keycloak
spec:
  selector:
    app: pg-keycloak
  ports:
    - port: 5432
      targetPort: 5432
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: default
  labels:
    app: keycloak
spec:
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
      - name: keycloak
        image: quay.io/keycloak/keycloak:latest
        args: ["start", "--cache-stack=kubernetes"]
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: default
  labels:
    app: keycloak
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: keycloak
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: keycloak
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
  - kind: Rule
    match: Host(`keycloak.lan`)
    services:
      - kind: Service
        name: keycloak
        port: 8080
  tls:
    secretName: keycloak-secret
